--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
           <li class="element__item">
             <img class="element__picture" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачаевск">
-            <div class="elemant__block">
+            <div class="element__block">
               <p class="element__text">Карачаевск</p>
               <button class="element__button">
               </button>
@@ -40,7 +40,7 @@
 
           <li class="element__item">
             <img class="element__picture" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус">
-            <div class="elemant__block">
+            <div class="element__block">
               <p class="element__text">Гора Эльбрус</p>
               <button class="element__button">
               </button>
@@ -49,7 +49,7 @@
 
           <li class="element__item">
             <img class="element__picture" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
-            <div class="elemant__block">
+            <div class="element__block">
               <p class="element__text">Домбай</p>
               <button class="element__button">
               </button>
@@ -58,7 +58,7 @@
 
           <li class="element__item">
             <img class="element__picture" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус">
-            <div class="elemant__block">
+            <div class="element__block">
               <p class="element__text">Гора Эльбрус</p>
               <button class="element__button">
               </button>
@@ -67,7 +67,7 @@
 
           <li class="element__item">
             <img class="element__picture" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
-            <div class="elemant__block">
+            <div class="element__block">
               <h3 class="element__text">Домбай</h3>
               <button class="element__button">
               </button>
@@ -76,7 +76,7 @@
 
           <li class="element__item">
             <img class="element__picture" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачаевск">
-            <div class="elemant__block">
+            <div class="element__block">
               <p class="element__text">Карачаевск-Ч...</p>
               <button class="element__button">
               </button>
