--- a/index.html
+++ b/index.html
@@ -8,21 +8,20 @@
   <title>Mesto</title>
 </head>
 
-<body>
+<body class="body">
   <div class="page">
     <header class="header">
       <img class="header__logo" src="./images/logo.svg" alt="Место">
-      <hr class="header__line">
     </header>
 
     <main class="content">
       <section class="profile">
         <img class="profile__avatar" src="./images/image.jpg" alt="фото Жак-Ив Кусто">
         <div class="profile__info">
-          <h1 class="profile__name">Жак-Ив Кусто</h1><button class="profile__edit"></button>
+          <h1 class="profile__name">Жак-Ив Кусто</h1><button class="profile__edit" type="button"></button>
           <p class="profile__job">Исследователь океана</p>
         </div>
-        <button class="profile__add"></button>
+        <button class="profile__add" type="button"></button>
       </section>
 
       <section class="element" aria-label="Фотографии">
@@ -32,8 +31,8 @@
           <li class="element__item">
             <img class="element__picture" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачаевск">
             <div class="element__block">
-              <p class="element__text">Карачаевск</p>
-              <button class="element__button">
+              <h2 class="element__text">Карачаевск</h2>
+              <button class="element__button" type="button">
               </button>
             </div>
           </li>
@@ -41,8 +40,8 @@
           <li class="element__item">
             <img class="element__picture" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус">
             <div class="element__block">
-              <p class="element__text">Гора Эльбрус</p>
-              <button class="element__button">
+              <h2 class="element__text">Гора Эльбрус</h2>
+              <button class="element__button" type="button">
               </button>
             </div>
           </li>
@@ -50,8 +49,8 @@
           <li class="element__item">
             <img class="element__picture" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
             <div class="element__block">
-              <p class="element__text">Домбай</p>
-              <button class="element__button">
+              <h2 class="element__text">Домбай</h2>
+              <button class="element__button" type="button">
               </button>
             </div>
           </li>
@@ -59,8 +58,8 @@
           <li class="element__item">
             <img class="element__picture" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус">
             <div class="element__block">
-              <p class="element__text">Гора Эльбрус</p>
-              <button class="element__button">
+              <h2 class="element__text">Гора Эльбрус</h2>
+              <button class="element__button" type="button">
               </button>
             </div>
           </li>
@@ -68,8 +67,8 @@
           <li class="element__item">
             <img class="element__picture" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
             <div class="element__block">
-              <h3 class="element__text">Домбай</h3>
-              <button class="element__button">
+              <h2 class="element__text">Домбай</h2>
+              <button class="element__button" type="button">
               </button>
             </div>
           </li>
@@ -77,8 +76,8 @@
           <li class="element__item">
             <img class="element__picture" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачаевск">
             <div class="element__block">
-              <p class="element__text">Карачаевск-Ч...</p>
-              <button class="element__button">
+              <h2 class="element__text">Карачаевск-Ч...</h2>
+              <button class="element__button" type="button">
               </button>
             </div>
           </li>
@@ -91,19 +90,21 @@
     </footer>
 
     <div class="popup">
-      <button class="popup__close"></button>
-      <form class="popup__container">
+      <div class="popup__container">
+        <button class="popup__close" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <input class="popup__edit-name" type="text" value="">
-        <input class="popup__edit-job" type="text" value="">
-        <button class="popup__save" type="submit">Сохранить</button>
-      </form>
+        <form class="popup__form" name="edit-profile">
+          <input class="popup__input popup__input_edit_name" name="edit-name" type="text" value="">
+          <input class="popup__input popup__input_edit_job" name="edit-job" type="text" value="">
+          <button class="popup__save" type="submit">Сохранить</button>
+        </form>
+      </div>
     </div>
 
 
   </div>
 
-  <script src="./scripts/script.js"></script>
+  <script src="./scripts/index.js"></script>
 
 </body>
 
