--- a/index.html
+++ b/index.html
@@ -25,62 +25,7 @@
       </section>
 
       <section class="element" aria-label="Фотографии">
-
         <ul class="element__list">
-
-          <li class="element__item">
-            <img class="element__picture" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачаевск">
-            <div class="element__block">
-              <h2 class="element__text">Карачаевск</h2>
-              <button class="element__button" type="button">
-              </button>
-            </div>
-          </li>
-
-          <li class="element__item">
-            <img class="element__picture" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус">
-            <div class="element__block">
-              <h2 class="element__text">Гора Эльбрус</h2>
-              <button class="element__button" type="button">
-              </button>
-            </div>
-          </li>
-
-          <li class="element__item">
-            <img class="element__picture" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
-            <div class="element__block">
-              <h2 class="element__text">Домбай</h2>
-              <button class="element__button" type="button">
-              </button>
-            </div>
-          </li>
-
-          <li class="element__item">
-            <img class="element__picture" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус">
-            <div class="element__block">
-              <h2 class="element__text">Гора Эльбрус</h2>
-              <button class="element__button" type="button">
-              </button>
-            </div>
-          </li>
-
-          <li class="element__item">
-            <img class="element__picture" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
-            <div class="element__block">
-              <h2 class="element__text">Домбай</h2>
-              <button class="element__button" type="button">
-              </button>
-            </div>
-          </li>
-
-          <li class="element__item">
-            <img class="element__picture" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачаевск">
-            <div class="element__block">
-              <h2 class="element__text">Карачаевск-Ч...</h2>
-              <button class="element__button" type="button">
-              </button>
-            </div>
-          </li>
         </ul>
       </section>
     </main>
@@ -88,21 +33,58 @@
     <footer class="footer">
       <p class="footer__copyright">© 2023 Mesto Russia</p>
     </footer>
+  </div>
 
+  <template id="elementTemplate">
+    <li class="element__item">
+      <img class="element__picture">
+      <button class="element__delete" type="button"></button>
+      <div class="element__block">
+        <h2 class="element__text"></h2>
+        <button class="element__button" type="button"></button>
+      </div>
+    </li>
+  </template>
+
+  <template id="popupTemplate">
     <div class="popup">
       <div class="popup__container">
         <button class="popup__close" type="button"></button>
-        <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form" name="edit-profile">
-          <input class="popup__input popup__input_edit_name" name="edit-name" type="text" value="">
-          <input class="popup__input popup__input_edit_job" name="edit-job" type="text" value="">
-          <button class="popup__save" type="submit">Сохранить</button>
-        </form>
       </div>
     </div>
+  </template>
 
+  <template id="popupInvisibleContainerTemplate">
+    <div class="popup">
+      <div class="popup__container popup__container_invisible">
+        <button class="popup__close" type="button"></button>
+      </div>
+    </div>
+  </template>
 
-  </div>
+  <template id="formPopupTemplate">
+    <h2 class="popup__title"></h2>
+    <form class="popup__form" name="popup-form">
+      <button class="popup__submit" type="submit"></button>
+    </form>
+  </template>
+
+  <template id="editProfileFormTemplate">
+    <input class="popup__input popup__input_edit_name" name="edit-name" type="text">
+    <input class="popup__input popup__input_edit_job" name="edit-job" type="text">
+  </template>
+
+  <template id="addItemFormTemplate">
+    <input class="popup__input popup__input_edit_name" name="edit-name" type="text" placeholder="Название">
+    <input class="popup__input popup__input_edit_link" name="edit-link" type="text" placeholder="Ссылка на картинку">
+  </template>
+
+  <template id="previewImageTemplate">
+    <figure class="popup__image-preview">
+      <img class="popup__image">
+      <figcaption class="popup__image-title"></figcaption>
+    </figure>
+  </template>
 
   <script src="./scripts/index.js"></script>
 
