--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
         <button class="popup__close" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form" name="popup-form">
-          <input class="popup__input popup__input_edit_name" name="edit-name" type="text">
-          <input class="popup__input popup__input_edit_job" name="edit-job" type="text">
+          <input class="popup__input popup__input_edit_name" name="edit-name" type="text" required minlength="2" maxlength="40">
+          <span class="popup__error edit-name-error"></span>
+          <input class="popup__input popup__input_edit_job" name="edit-job" type="text" required minlength="2" maxlength="200">
+          <span class="popup__error edit-job-error"></span>
           <button class="popup__submit" type="submit">Сохранить</button>
         </form>
       </div>
@@ -51,8 +53,10 @@
         <button class="popup__close" type="button"></button>
         <h2 class="popup__title">Новое место</h2>
         <form class="popup__form" name="popup-form">
-          <input class="popup__input popup__input_edit_name" name="edit-name" type="text" placeholder="Название">
-          <input class="popup__input popup__input_edit_link" name="edit-link" type="text" placeholder="Ссылка на картинку">
+          <input class="popup__input popup__input_edit_name" name="edit-name" type="text" placeholder="Название" required minlength="2" maxlength="30">
+          <span class="popup__error edit-name-error"></span>
+          <input class="popup__input popup__input_edit_link" name="edit-link" type="url" placeholder="Ссылка на картинку" required>
+          <span class="popup__error edit-link-error"></span>
           <button class="popup__submit" type="submit">Создать</button>
         </form>
       </div>
@@ -82,6 +86,7 @@
   </template>
 
   <script src="./scripts/index.js"></script>
+  <script src="./scripts/validate.js"></script>
 
 </body>
 
