--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="popup__container">
         <button class="popup__close" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form" name="popup-form">
+        <form class="popup__form" name="popup-form" novalidate>
           <input class="popup__input popup__input_edit_name" name="edit-name" type="text" required minlength="2" maxlength="40">
           <span class="popup__error edit-name-error"></span>
           <input class="popup__input popup__input_edit_job" name="edit-job" type="text" required minlength="2" maxlength="200">
@@ -52,7 +52,7 @@
       <div class="popup__container">
         <button class="popup__close" type="button"></button>
         <h2 class="popup__title">Новое место</h2>
-        <form class="popup__form" name="popup-form">
+        <form class="popup__form" name="popup-form" novalidate>
           <input class="popup__input popup__input_edit_name" name="edit-name" type="text" placeholder="Название" required minlength="2" maxlength="30">
           <span class="popup__error edit-name-error"></span>
           <input class="popup__input popup__input_edit_link" name="edit-link" type="url" placeholder="Ссылка на картинку" required>
