--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./pages/index.css">
   <title>Mesto</title>
 </head>
 
 <body class="body">
   <div class="page">
     <header class="header">
-      <img class="header__logo" src="./images/logo.svg" alt="Место">
+      <img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="Место">
     </header>
 
     <main class="content">
       <section class="profile">
-        <img class="profile__avatar" src="./images/image.jpg" alt="фото Жак-Ив Кусто">
+        <img class="profile__avatar" src="<%=require('./images/image.jpg')%>" alt="фото Жак-Ив Кусто">
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1><button class="profile__edit" type="button"></button>
           <p class="profile__job">Исследователь океана</p>
@@ -84,8 +83,6 @@
       </div>
     </li>
   </template>
-
-  <script src="./scripts/index.js" type="module"></script>
 
 </body>
 
