--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,13 @@
 
     <main class="content">
       <section class="profile">
-        <img class="profile__avatar" src="<%=require('./images/image.jpg')%>" alt="фото Жак-Ив Кусто">
+        <div class="profile__picture">
+          <img class="profile__avatar" alt="Фото">
+          <div class="profile__overlay"></div>
+        </div>
         <div class="profile__info">
-          <h1 class="profile__name">Жак-Ив Кусто</h1><button class="profile__edit" type="button"></button>
-          <p class="profile__job">Исследователь океана</p>
+          <h1 class="profile__name"></h1><button class="profile__edit" type="button"></button>
+          <p class="profile__job"></p>
         </div>
         <button class="profile__add" type="button"></button>
       </section>
@@ -40,8 +43,20 @@
         <form class="popup__form" name="popup-form" novalidate>
           <input class="popup__input popup__input_edit_name" name="name" type="text" required minlength="2" maxlength="40">
           <span class="popup__error name-error"></span>
-          <input class="popup__input popup__input_edit_job" name="job" type="text" required minlength="2" maxlength="200">
-          <span class="popup__error job-error"></span>
+          <input class="popup__input popup__input_edit_about" name="about" type="text" required minlength="2" maxlength="200">
+          <span class="popup__error about-error"></span>
+          <button class="popup__submit" type="submit">Сохранить</button>
+        </form>
+      </div>
+    </div>
+
+    <div class="popup popup_edit-avatar">
+      <div class="popup__container">
+        <button class="popup__close" type="button"></button>
+        <h2 class="popup__title">Обновить аватар</h2>
+        <form class="popup__form" name="popup-form" novalidate>
+          <input class="popup__input popup__input_edit_avatar" name="avatar" type="url" placeholder="Ссылка на картинку" required>
+          <span class="popup__error avatar-error"></span>
           <button class="popup__submit" type="submit">Сохранить</button>
         </form>
       </div>
@@ -57,6 +72,16 @@
           <input class="popup__input popup__input_edit_link" name="link" type="url" placeholder="Ссылка на картинку" required>
           <span class="popup__error link-error"></span>
           <button class="popup__submit" type="submit">Создать</button>
+        </form>
+      </div>
+    </div>
+
+    <div class="popup popup_remove-item">
+      <div class="popup__container">
+        <button class="popup__close" type="button"></button>
+        <h2 class="popup__title">Вы уверены?</h2>
+        <form class="popup__form popup__form_action" name="popup-form" novalidate>
+          <button class="popup__submit" type="submit">Да</button>
         </form>
       </div>
     </div>
@@ -79,7 +104,10 @@
       <button class="element__delete" type="button"></button>
       <div class="element__block">
         <h2 class="element__text"></h2>
-        <button class="element__button" type="button"></button>
+        <div class="element__like">
+          <button class="element__button" type="button"></button>
+          <span class="element__likes"></span>
+        </div>
       </div>
     </li>
   </template>
